--- a/index.html
+++ b/index.html
@@ -26,50 +26,50 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                 ว่าไง
+                <span id="name">เอิร์น</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">ชื่อหนูเพราะมากเลยนะครับ</p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>วันนี้วันเกิดหนูนิ!! :D</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday to youu!! ปีนี้ก็อายุเยอะขึ้นอีกปีแล้วนะครับนี่เป็นครั้งแรกเลยที่พี่ได้เซอร์ไพรส์พี่หวังว่าหนูจะมีความสุขนะครับยังไงก็ขอให้หนูมีความสุขมากๆเลยนะครับขอให้หนูอายุยืนยาวอยู่ด้วยกันกับพี่แบบนี้ไปทุกปีเลยนะครับ รักนะครับสุดที่รัก
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">พี่มีอะไรจะบอกหนู</p>
+            <p class="idea-2">พี่จะบอกหนูว่า</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
+                หนูเป็นคนที่<br>
+                <strong>พิเศษมาก</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">เพราะ</p>
             <p class="idea-5">
-                You are Special
+                หนูคือคนที่น่ารักที่สุดเลย
                 <span>:)</span>
             </p>
             <p class="idea-6">
-                <span>S</span>
-                <span>O</span>
+                <span>เลย</span>
+                <span>นะ</span>
             </p>
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/ACIN3157.JPG" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">ขอให้หนูมีความสุขมากๆนะครับ ;)</h5>
             </div>
         </div>
 
@@ -142,8 +142,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>จบแล้วหวังว่าหนูจะมีความสุขนะครับ.</p>
+            <p id="replay">กดตรงนี้นะถ้าจะดูอีกครั้ง</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
