--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/ssyoutube.online - LANDOKMAI - Please be true [Official Lyrics].m4a">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                 ว่าไง
+                ว่าไง
                 <span id="name">เอิร์น</span>
             </h1>
             <p class="two" id="greetingText">ชื่อหนูเพราะมากเลยนะครับ</p>
